--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <!--font family-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;600&display=swap" rel="stylesheet">
     <!--scrollrevealJS-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>Portafolio Omar Sosa</title>
@@ -18,15 +18,15 @@
   <section class="home">
     <div class="container">
 
-        <h1 class="title">&ltHi, I'm Omar Sosa&gt</h1>
-        <h2 class="title2">Frontend Developer</h2>
+        <h1 class="title"><span>&lt</span>Hi, I<span>'</span>m Omar Sosa<span>&gt</span> </h1>
+        <h2 class="title2"><span>Front</span>end Developer</h2>
                 <div class="a1">
-                  <a href="#">Contact</a>
+                  <a href="#">Cont<span>ac</span>t</a>
                   <img class="image-menu" src="/img/codificacion-html.png" alt="">
-                  <a href="#about">About</a>
+                  <a href="#about">Ab<span>ou</span>t</a>
                 </div>
                 <div class="a2">
-                  <a href="#">Projects</a>
+                  <a href="#">Proj<span>ec</span>ts</a>
                 </div>
     </div>
   </section>
@@ -101,27 +101,27 @@
                   I am always seeking to improve my skills to continually grow professionally to be able to contribute consistently to the workgroup with which I am.</p><br>
                   <a class="linkcv" href="https://drive.google.com/file/d/1P4RN6Q4GQWGD5o-d_eQWNFFA3L3lhYUJ/view?usp=sharing" target="blank">Download CV</a>
             </div>
-            <div class="container-language">
-              <h4 class="saludo">My skills</h4>
-                <div class="img-one">
-                  <img class="img" src="/img/codificacion-html.png" alt="">
-                </div>
-
-                <div class="img-two">
-                  <img class="img" src="/img/css-3.png" alt="">
-                </div>
-
-                <div class="img-three">
-                  <img class="img" src="/img/html-5.png" alt="">
-                </div>
-
-                <div class="img-four">
-                  <img class="img" src="/img/js.png" alt="">
-                </div>
-
-            </div>
         </div>
     </div>
+  </section>
+  <section class="skills">
+    <div class="container-language">
+      <h4 class="saludo">My skills</h4>
+        <div class="img-one">
+          <img class="img" src="/img/codificacion-html.png" alt="">
+        </div>
+
+        <div class="img-two">
+          <img class="img" src="/img/css-3.png" alt="">
+        </div>
+
+        <div class="img-three">
+          <img class="img" src="/img/html-5.png" alt="">
+        </div>
+
+        <div class="img-four">
+          <img class="img" src="/img/js.png" alt="">
+        </div>
   </section>
   <section class="section-form">
         <div class="container-form">
