añadi fontawesome y elimine el form , al igual que su javascript

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <a href="#about">Ab<span>ou</span>t</a>
                 </div>
                 <div class="a2">
-                  <a href="#">Proj<span>ec</span>ts</a>
+                  <a href="#skills">Proj<span>ec</span>ts and skills</a>
                 </div>
     </div>
   </section>
@@ -93,62 +93,47 @@
     <!--sobre mi / about me-->
   <section id="about" class="about">
     <div class="container-about">
-        <div class="container-about_language">
             <div class="container-description">
               <h4 class="saludo">I'm Omar Sosa, Web Developer</h4>
               <br> <br>
-                <p class="description"> I am a Front End developer with experience in creating websites and web applications. I specialize in JavaScript <br> <br>
+                <p class="description"> I am a Front End developer with experience in creating websites and web applications. I specialize in JavaScript. <br> <br>
                   I am always seeking to improve my skills to continually grow professionally to be able to contribute consistently to the workgroup with which I am.</p><br>
                   <a class="linkcv" href="https://drive.google.com/file/d/1P4RN6Q4GQWGD5o-d_eQWNFFA3L3lhYUJ/view?usp=sharing" target="blank">Download CV</a>
-            </div>
-        </div>
+      </div>
     </div>
   </section>
-  <section class="skills">
+
+  <section class="skills" id="skills">
+    <h4 class="title__skills">My skills :</h4>
     <div class="container-language">
-      <h4 class="saludo">My skills</h4>
+
         <div class="img-one">
-          <img class="img" src="/img/codificacion-html.png" alt="">
+          <i class="fab fa-html5"></i>
         </div>
 
         <div class="img-two">
-          <img class="img" src="/img/css-3.png" alt="">
+          <i class="fab fa-js-square"></i>
         </div>
 
         <div class="img-three">
-          <img class="img" src="/img/html-5.png" alt="">
+          <i class="fab fa-css3-alt"></i>
         </div>
 
         <div class="img-four">
-          <img class="img" src="/img/js.png" alt="">
+          <i class="fab fa-sass"></i>
         </div>
-  </section>
-  <section class="section-form">
-        <div class="container-form">
-          <h5 class="title-form">SAY "HELLO"</h5>
-            <div class="formulario">
-              <form action="">
 
-                <div class="c-input">
-                  <input class="input1" type="text" placeholder="Your name" id="name">
-                </div>
-
-                <div class="c-input">
-                  <input class="input1" type="email" placeholder="Your E-Mail" id="email">
-                </div>
-
-                <div class="c-input2">
-                  <textarea class="message" placeholder="Your message" id="message"></textarea>
-                </div>
-
-                <div class="c-button">
-                  <button class="button" onclick="captura()"type="button">Send</button>
-                </div>
-
-              </form>
-            </div>
+        <div>
+          <i class="fab fa-bootstrap"></i>
         </div>
+
+        <div>
+          <i class="fab fa-react"></i>
+        </div>
+
+      </div>
   </section>
+
   <!--projects-->
   <section class="Projects">
 
@@ -156,5 +141,7 @@
 
     <!--javascript-->
     <script src="/app.js"></script>
+    <!--fontawesome-->
+    <script src="https://kit.fontawesome.com/4a290b8490.js" crossorigin="anonymous"></script>
 </body>
 </html>
