--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 </head>
 <body>
   <!--menu and presentaion-->
-  <section class="home">
+  <section class="home" id="home">
     <div class="container">
 
         <h1 class="title"><span>&lt</span>Hi, I<span>'</span>m Omar Sosa<span>&gt</span> </h1>
         <h2 class="title2"><span>Front</span>end Developer</h2>
                 <div class="a1">
-                  <a href="#">Cont<span>ac</span>t</a>
+                  <a href="#contact">Cont<span>ac</span>t</a>
                   <img class="image-menu" src="/img/codificacion-html.png" alt="">
                   <a href="#about">Ab<span>ou</span>t</a>
                 </div>
@@ -100,7 +100,7 @@
 
   </section>
 <!--seccion de contacto/contact-->
-  <section class="contact">
+  <section class="contact" id="contact">
     <div class="container-contact">
       <h4 class="title-c">Cont<span>ac</span>t</h4>
       <p class="parrafo-c">Contact me if you want us to work together or if you want to know more about me.</p>
@@ -108,29 +108,36 @@
       <div class="grid-contact">
 
         <div>
-          <i class="fab fa-twitter"></i>
-          <a class="social" href="#">Twitter</a>
+          <i class="fab fa-twitter"></i><br>
+          <a class="social" href="https://twitter.com/OmarSos72950976?s=08" target="blank">Twitter</a>
         </div>
 
         <div>
-          <i class="fab fa-github"></i>
-          <a class="social" href="https://github.com/omar1779/CodeX">GitHub</a>
+          <i class="fab fa-github"></i><br>
+          <a class="social" href="https://github.com/omar1779/CodeX" target="blank">GitHub</a>
         </div>
 
         <div>
-          <i class="fab fa-linkedin-in"></i>
-          <a class="social" href="www.linkedin.com/in/Omar-CodeX">LinkedIn</a>
+          <i class="fab fa-linkedin-in"></i><br>
+          <a class="social" href="https://www.linkedin.com/in/omar-codex/" target="blank">LinkedIn</a>
         </div>
 
         <div>
-          <i class="fab fa-instagram"></i>
-          <a class="social" href="#">Instagram</a>
+          <i class="fab fa-instagram"></i><br>
+          <a class="social" href="https://www.instagram.com/omarsosa.fx/?hl=es-la" target="blank">Instagram</a>
         </div>
 
       </div>
     </div>
-
   </section>
+  <div class="container-footer">
+    <footer class="footer">
+      <h5 class="title-footer">
+        Copyright © 2021.<a href="#home" class="enlace-home">@OmarSosa</a>
+        All Rights Reserved
+      </h5>
+    </footer>
+  </div>
     <!--javascript-->
     <script src="/app.js"></script>
     <!--fontawesome-->
