--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
         <div>
           <i class="fab fa-github"></i><br>
-          <a class="social" href="https://github.com/omar1779/CodeX" target="blank">GitHub</a>
+          <a class="social" href="https://github.com/omar1779" target="blank">GitHub</a>
         </div>
 
         <div>
