--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
 
           <div class="carousel-item" id="p4">
-            <img src="/img/Captura de pantalla 2021-06-27 121713.png" class="img-project" alt="projecto4">
+            <img src="img/Captura de pantalla 2021-06-27 121713.png" class="img-project" alt="projecto4">
           </div>
 
         </div>
