--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2 class="title2"><span>Front</span>end Developer</h2>
                 <div class="a1">
                   <a href="#contact">Cont<span>ac</span>t</a>
-                  <img class="image-menu" src="/img/codificacion-html.png" alt="">
+                  <img class="image-menu" src="/img/codificacion.png" alt="">
                   <a href="#about">Ab<span>ou</span>t</a>
                 </div>
                 <div class="a2">
@@ -81,19 +81,19 @@
           <p class="title2-projects">Here you can see the projects I have worked on.</p>
 
           <div class="carousel-item" id="p1">
-            <img src="/img/Captura de pantalla 2021-05-04 165336.png" class="img-project" alt="projecto1">
+            <img src="/img/proyecto1.png" class="img-project" alt="projecto1">
           </div>
 
           <div class="carousel-item" id="p2">
-            <img src="/img/Captura de pantalla 2021-06-27 120523.png" class="img-project" alt="projecto2">
+            <img src="/img/proyecto2.png" class="img-project" alt="projecto2">
           </div>
 
           <div class="carousel-item" id="p3">
-            <img src="/img/Captura de pantalla 2021-06-27 121302.png" class="img-project" alt="projecto3">
+            <img src="/img/proyecto3.png" class="img-project" alt="projecto3">
           </div>
 
           <div class="carousel-item" id="p4">
-            <img src="img/Captura de pantalla 2021-06-27 121713.png" class="img-project" alt="projecto4">
+            <img src="img/proyecto4.png" class="img-project" alt="projecto4">
           </div>
 
         </div>
