--- a/index.html
+++ b/index.html
@@ -139,10 +139,8 @@
     </footer>
   </div>
     <!--javascript-->
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
     <!--fontawesome-->
     <script src="https://kit.fontawesome.com/4a290b8490.js" crossorigin="anonymous"></script>
-    <!--bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
